# Owl-OptiX-7

./: .gitignore  .gitmodules
1. CookTorranceBRDF/: CMakeLists.txt  imGuiViewer.cpp  shader.cu  shader.h  shaderMaterials.h
2. CookTorranceBRDF_1Light/: imGuiViewer.cpp  imGuiViewer.h  main.cpp  shaderMaterials.h  utils.cpp  viewer.h
3. CookTorranceBRDF_DirectLighting/: cookTorrance.h  emissive_triangles_utils.cpp  geometriesData.h  imGuiViewer.cpp  imGuiViewer.h  shader.cu  shader.h  utils.cpp
3. CookTorranceBRDF_DirectLighting/rapidobj/: rapidobj.hpp
4. CookTorranceBRDF_Denoiser/: CMakeLists.txt  easy_denoiser.cpp  easy_denoiser.h  emissive_triangles_utils.cpp  emissive_triangles_utils.h  imGuiViewer.cpp  imGuiViewer.h  shader.cu  shader.h
5. Diffuse Textures/: CMakeLists.txt  easy_denoiser.cpp  emissive_triangles_utils.cpp  float4ToUint32.cu  float4ToUint32.h  imGuiViewer.cpp  imGuiViewer.h  main.cpp  shader.cu  shader.h  shaderMaterials.h
5. Direct Lighting Solid Angle/: CMakeLists.txt  easy_denoiser.cpp  easy_denoiser.h  geometriesData.h  imGuiViewer.cpp  utils.cpp  utils.h
6. HDR Pipeline and HDR skysphere/: CMakeLists.txt  easy_denoiser.cpp  easy_denoiser.h  emissiveTrianglesUtils.cpp  imGuiViewer.cpp  imGuiViewer.h  shader.cu  tone_mapping.cu  tone_mapping.h  utils.cpp
7. CookTorrance IS/: CMakeLists.txt  cookTorrance.h  imGuiViewer.cpp  imGuiViewer.h  optiXDenoiserWrapper.cpp  optiXDenoiserWrapper.h  shader.cu  shader.h  utils.cpp  viewer.cpp
CookTorranceBRDF/: CMakeLists.txt  cookTorrance.h  geometriesData.h  imGuiViewer.cpp  imGuiViewer.h  objUtils.cpp  objUtils.h  shader.cu  shader.h  shaderMaterials.h  utils.cpp  utils.h  viewer.cpp  viewer.h
CookTorranceBRDF_1Light/: CMakeLists.txt  cookTorrance.h  cudaBuffer.h  shader.cu  utils.h
CookTorranceBRDF_DirectLighting/: CMakeLists.txt  cookTorrance.h  cudaBuffer.h  emissive_triangles_utils.h  geometriesData.h  imGuiViewer.cpp  imGuiViewer.h  shader.cu  shader.h  shaderMaterials.h
Owl Ray Tracing/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp  objUtils.cpp  objUtils.h  scene.cpp  scene.h  viewer.cpp  viewer.h
RTioW/: CMakeLists.txt  cudaBuffer.h  floatToRgb.cu  main.cpp  materials.h  objUtils.cpp  objUtils.h  shader.cu  shader.h  viewer.cpp  viewer.h
common_data/: cornell-box.mtl  cornell_blocked.mtl  cornell_blocked_double_light.mtl  dragon_for_cornell.mtl
